do things, dunno

--- a/config.ini.example
+++ b/config.ini.example
@@ -3,9 +3,5 @@ client_id = YOUR_CLIENT_ID
 client_secret = YOUR_CLIENT_SECRET
 redirect_uri = YOUR_REDIRECT_URI
 
-[geofency]
-device_name = GEOFENCY_DEVICE_ID
-
-[venues]
-VENUE_NAME_IN_GEOFENCY = VENUE_ID
-
+[GEOFENCY_DEVICE_ID]
+GEOFENCY_PLACE_NAME = FOURSQUARE_VENUE_ID
